# rtd

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MyRtd.def  README.md  README.txt  package-lock.json  package.json  test-ws-server.js
.claude/: settings.local.json
.github/workflows/: windows-build.yml
idl/: TypeLibrary.idl
include/: IDataSource.h  LegacyRandomDataSource.h  Logger.h  ScalarRandomSource.h  ScalarSource.h  WebSocketDataSource.h  WebSocketManager.h  WebSocketSource.h  dllmain.h
res/: RtdTick.rc.in  RtdTick.rgs  resource.h
src/: IDataSource.h  LegacyRandomDataSource.cpp  LegacyRandomDataSource.h  Logger.h  RtdTick.cpp  RtdTick.h  ScalarRandomSource.cpp  ScalarSource.cpp  WebSocketDataSource.cpp  WebSocketDataSource.h  WebSocketManager.cpp  WebSocketManager.h  WebSocketSource.cpp  dllmain.cpp  dllmain.h
tests/: RTDClient.xlsx  websocket_client.cpp
